[tool.poetry]
name = "reinforcement-learning-experiments"
version = "0.1.0"
description = ""
authors = ["Arseniy Shchepetnov <a.shchepetnov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
pylint = "^2.13.9"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
